--- a/front/src/PopUp.css
+++ b/front/src/PopUp.css
@@ -22,3 +22,28 @@ position:absolute;
 top:16px;
 right: 16px;
 }
+
+.edit-popup {
+  top: -20;
+  left: 20;
+  width: 100%;
+  height: 10vh;
+  display:flex;
+  justify-content: left;
+  align-items: left;
+}
+
+.edit-popup-inner{
+text-size-adjust: large;
+position: relative;
+padding:20px;
+width: 100%;
+max-width: 1000px;
+background-color: rgb(255, 255, 255); 
+}
+
+.edit-popup-inner .close-btn{
+position:absolute;
+top:16px;
+right: 16px;
+}
